--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -207,6 +207,27 @@ img {
     transition-property: background-color;
     transition-duration: .3s;
 }
+.producto__enlace3 {
+    margin-top: 2rem;
+    display: block;
+    text-decoration: none;
+    color: white;
+    background: var(--primary);
+    padding: 1rem 5rem;
+    border: 2px solid var(--primary);
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    transition-property: background-color;
+    transition-duration: .3s;
+}
+.producto__enlace3:hover {
+    border: 2px solid #FFF;
+    background-color: var(--blanco);
+    color: black;
+    /*color: rgb(30, 107, 207);*/
+}
 .producto__enlace2 {
     margin-top: 2rem;
     display: block;
