--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -126,7 +126,7 @@ img {
 @media (min-width: 768px) { 
     .modelo {
         text-align: left;
-        width: 50%;
+        /*width: 50%;   cambios*/
     }
 }
  .modelo__nombre {
